<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL" Id="{ba655886-9947-4787-bd10-a16d0603440f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	
	NUM_MOVERS		: USINT := 8;
	NUM_STATIONS	: USINT := 2;
	TRACK_LENGTH	: LREAL := 4000;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>